<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">VaiaBitApp</string>
    <string name="action_settings">Settings</string>
    <string name="title_item_list">Items</string>
    <string name="title_item_detail">Item Detail</string>

    <!-- fragment principal -->
    <string name="login">Login</string>
    <string name="registrarse">Registrarse</string>
    <string name="ir_a_la_app">Ir a la app</string>

    <!-- fragment LoginRegistro -->
    <string name="login_hint">Login</string>
    <string name="contrasenha_hint">Contraseña</string>
    <string name="iniciar_sesion">Iniciar Sesión</string>
    <string name="registrar">Registrar</string>
    <string name="cancelar">Cancelar</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
