<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.vaiabitapp.FragmentLoginRegistro" >

    <EditText
        android:id="@+id/etLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/login_hint" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/contrasenha_hint"
        android:inputType="textPassword" />

    <Button 
        android:id="@+id/btnIniciar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/iniciar_sesion" />

    <Button
        android:id="@+id/btnRegistrar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/registrar" />

    <Button
        android:id="@+id/btnCancelar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancelar" />

</LinearLayout>
